Changed wording on many pages. Added more necessary article tags. Added a fiddle image and class tags for images on index.html to scale them. Added style tage to head in index.html to bold the font within the address tag. Added in line CSS to center the "Boots N' Beer Band Homepage" line. Added 2017's to foot on some pages to make it consistent through all pages. Added borders to all images. Added more colors and fonts to Albums table. Deleted some unneeded header images I missed prior. Made article text size bigger and Calibri serif. Added fonts and sizes to heading tags 2-4.

--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+    <h1>The Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
@@ -36,24 +36,35 @@
     </ul>
   </nav><br>
   <article>
-    <h1>Information Page</h1>
-    <p>This is an info page to get to know all of the band members of this great country group, Boots N Beer.</p>
-    <h2>Biography</h2><img src="img/my_face.jpg" alt="Image of Joe Deere">
+    <h2>Information Page</h2>
+    <p>This is an info page to get to know all of the band members of this great country group, Boots N' Beer.</p>
+  </article><br>
+  <article>
+    <h2>Meet the Band</h2>
+  </article><br>
+  <article>
+    <h3>Joe Jacks</h3><img src="img/my_face.jpg" alt="Image of Joe Deere">
     <p>Joe Jacks is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he enjoys
-    wearing a good pair of boots and blue jeans and watching football on Sundays.</p><img src="img/ben_face.png" alt=
-    "Image of Randy Raccoon">
+    wearing a good pair of boots and blue jeans and watching football on Sundays.</p>
+  </article><br>
+  <article>
+    <h3>Randy Raccoon</h3><img src="img/ben_face.png" alt="Image of Randy Raccoon">
     <p>Randy Raccoon is the lead guitarist and back-up vocals. He plays acoustic, electric, and steel guitar, and also banjo,
-    and fiddle! Randy's favorite country star is Charlie Daniel's and he loves watching the Grand Ole Opry.</p><img src=
-    "img/chase_face.png" alt="Image of Denver Denim">
+    and fiddle! Randy's favorite country star is Charlie Daniel's and he loves watching the Grand Ole Opry.</p>
+  </article><br>
+  <article>
+    <h3>Denver Denim</h3><img src="img/chase_face.png" alt="Image of Denver Denim">
     <p>Denver Denim is the lead bass and back-up vocals. He also plays harmonica! Denver's favorite movie is the Blue's
-    Brothers because it's hilarious and it has great music in it too!</p><img src="img/duck_kid_page.png" alt=
-    "Image of Jake Grit">
+    Brothers because it's hilarious and it has great music in it too!</p>
+  </article><br>
+  <article>
+    <h3>Jake Grit</h3><img src="img/duck_kid_page.png" alt="Image of Jake Grit">
     <p>Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group, so he plays the drums, piano, and
     even the bongos! Jake says that he has playing drums ever since he was a kid, whether it was when he bought his first pair
     of drums or when he was beating on the trash can outside, he just felt this rhythm inside!</p>
   </article><br>
   <footer>
-    &copy; by Boots 'N Beer
+    &copy; 2017 by Boots 'N Beer
   </footer>
 </body>
 </html>
