--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1>
+    <h1>The Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
@@ -36,7 +36,7 @@
     </ul>
   </nav><br>
   <article>
-    <h1>Log-in Page</h1>
+    <h2>Log-in Page</h2>
     <form>
       <pre>  
 Username: <input type="text" name="username">
