--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1>
+    <h1>The Boots N' Beer Band</h1>
   </header>
-   <nav>
+  <nav>
     <ul>
       <li>
         <a href="about_page.html">About Us</a>
@@ -36,7 +36,7 @@
     </ul>
   </nav><br>
   <article>
-    <h1>Schedule</h1>
+    <h2>Tour Schedule</h2>
     <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
     <ol>
       <li>September 15th - Indianola, Iowa</li>
@@ -54,7 +54,7 @@
       <li>October 31st - Ames, Iowa</li>
       <li>November 4th - Templeton, Iowa</li>
     </ol>
-    <h3>More Dates To Be Announced</h3><br>
+    <h3>More Dates To Be Announced...</h3>
   </article><br>
   <footer>
     &copy; 2017 by Boots 'N Beer
