--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1>
+    <h1>The Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
@@ -37,18 +37,25 @@
     <nav>
       <br>
       <article>
-        <h1>Items for sale</h1>
+        <h2>Items for sale</h2>
+      </article><br>
+      <article>
         <h4>Coffee Mug</h4><img src="img/bootsnbeer_mug.png" alt="Photo of Mug">
         <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
-        <h4>Tee Shirt</h4><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
+      </article><br>
+      <article>
+        <h4>T-Shirt</h4><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
         <p>T-shirts with the logo on the front are available in the following sizes:</p>
-        <p id="sizes"> S, M, L, XL, XXL, XXXL.</p>
+        <p id="sizes">S, M, L, XL, XXL, XXXL.</p>
+      </article><br>
+      <article>
         <h4>Mouse Pad</h4><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
-        <p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.</p><br>
-        <br>
-        <br>
-        <h2>More items coming soon!</h2>
-      </article>
+        <p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.</p>
+      </article><br>
+      <article>
+        <h3>More items coming soon!</h3>
+      </article><br>
+      <br>
       <footer>
         &copy; 2017 by Boots 'N Beer
       </footer>
