--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1>
+    <h1>The Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
@@ -36,12 +36,16 @@
     </ul>
   </nav><br>
   <article>
-    <h1>About the Band</h1>
+    <h2>About the Band</h2>
+  </article><br>
+  <article>
     <h3>Beginnings</h3>
     <p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing,
     they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making
     headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands
     performing in the Des Moines area.</p>
+  </article><br>
+  <article>
     <h3>Our Music</h3>
     <p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
     <ul>
@@ -51,6 +55,8 @@
       <li>Blues</li>
     </ul>
     <p>Upon request, the band can play almost every style or genre of music you desire.</p>
+  </article><br>
+  <article>
     <h3>Tour</h3>
     <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including,
     but not limited to:</p>
@@ -60,6 +66,8 @@
       <li>Pleasantville</li>
     </ul>
     <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
+  </article><br>
+  <article>
     <h3>Website source</h3>
     <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
     website.</p><a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png"></a>
