--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1>
+    <h1>The Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
@@ -36,9 +36,9 @@
     </ul>
   </nav><br>
   <article>
-    <h1>Album Page</h1>
-    <p>Main page displays Boots N Beer's latest hit albums.</p>
-    <p>Click on this page to see two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs".</p>
+    <h2>Studio Albums</h2>
+    <p>Check out Boots N Beer's latest hit albums!</p>
+    <p>These studio albums are two of Boots N' Beer's hottest albums, "Dirty" and "Muddy Spurs".</p>
     <table>
       <thead>
         <tr>
@@ -48,8 +48,8 @@
       </thead>
       <tbody>
         <tr>
-          <td>Track List:</td>
-          <td>Track List:</td>
+          <td class="tracks">Track List:</td>
+          <td class="tracks">Track List:</td>
         </tr>
       </tbody>
       <tfoot>
@@ -80,7 +80,7 @@
     </address>
   </article><br>
   <footer>
-    &copy; by Boots 'N Beer
+    &copy; 2017 by Boots 'N Beer
   </footer>
 </body>
 </html>
