--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+    <h1>The Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
@@ -36,7 +36,7 @@
     </ul>
   </nav><br>
   <article>
-    <h1>Sign Up Page</h1>
+    <h2>Sign Up Page</h2>
     <p>By creating an account, you will be able to keep a shopping cart of merchandise you intend on purchasing if you leave
     the webiste. You will also be notified whenever information on any of the pages have been updated.</p>
     <form>
@@ -48,9 +48,9 @@ Password:   <input type="text" name="password">
 <input type="submit" value="Submit">
 </pre>
     </form>
-    </article><br>
-      <footer>
-        &copy; 2017 by Boots 'N Beer
-      </footer>
+  </article><br>
+  <footer>
+    &copy; 2017 by Boots 'N Beer
+  </footer>
 </body>
 </html>
