Minor changes to title names of the pages.

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -9,7 +9,7 @@
         }
   </style>
   <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
-  <title>Boots 'N Beer: About Page</title>
+  <title>Boots 'N Beer: Homepage</title>
 </head>
 <body>
   <header>
