--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
-  <title>Boots 'N Beer Band: About Page</title>
+  <title>Boots N' Beer Band: About Page</title>
 </head>
 <body>
   <header>
