Added new, blank CSS file and placed it in a new css folder.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -3,6 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+      
   <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots N' Beer Band: About Page</title>
 </head>
