--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -3,84 +3,97 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  
+   <title>Boots N' Beer Band: About Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-      
-  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
-  <title>Boots N' Beer Band: About Page</title>
+  <link rel="stylesheet" href="bootstrap.css">
+ 
 </head>
 <body>
-  <header>
-    <h1>The Boots N' Beer Band</h1>
-  </header>
-  <nav>
-    <ul>
-      <li>
-        <a href="album_page.html">Albums</a>
-      </li>
-      <li>
-        <a href="index.html">Index</a>
-      </li>
-      <li>
-        <a href="info_page.html">Members' Information</a>
-      </li>
-      <li>
-        <a href="log-in_page.html">Log-in</a>
-      </li>
-      <li>
-        <a href="schedule_page.html">Schedule</a>
-      </li>
-      <li>
-        <a href="signup_page.html">Sign up</a>
-      </li>
-      <li>
-        <a href="store_page.html">Merchandise</a>
-      </li>
-    </ul>
-  </nav><br>
-  <article>
-    <h2>About the Band</h2>
-  </article><br>
-  <article>
-    <h3>Beginnings</h3>
-    <p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing,
-    they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making
-    headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands
-    performing in the Des Moines area.</p>
-  </article><br>
-  <article>
-    <h3>Our Music</h3>
-    <p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
-    <ul>
-      <li>Country</li>
-      <li>Bluegrass</li>
-      <li>Folk</li>
-      <li>Blues</li>
-    </ul>
-    <p>Upon request, the band can play almost every style or genre of music you desire.</p>
-  </article><br>
-  <article>
-    <h3>Tour</h3>
-    <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including,
-    but not limited to:</p>
-    <ul>
-      <li>Indianola</li>
-      <li>Red Oak</li>
-      <li>Pleasantville</li>
-    </ul>
-    <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
-  </article><br>
-  <article>
-    <h3>Website source</h3>
-    <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
-    website.</p><a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png"></a>
-  </article><br>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
+        "false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span></button> <a class="navbar-brand" href=
+        "#">Bootstrap</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <a href="album_page.html">Albums</a>
+          </li>
+          <li>
+            <a href="index.html">Index</a>
+          </li>
+          <li>
+            <a href="info_page.html">Members' Information</a>
+          </li>
+          <li>
+            <a href="log-in_page.html">Log-in</a>
+          </li>
+          <li>
+            <a href="schedule_page.html">Schedule</a>
+          </li>
+          <li>
+            <a href="signup_page.html">Sign up</a>
+          </li>
+          <li>
+            <a href="store_page.html">Merchandise</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <div class="container">
+    <div class="below_menu_container">
+      <header>
+        <h1>The Boots N' Beer Band</h1>
+      </header>
+      <article>
+        <h2>About the Band</h2>
+      </article><br>
+      <article>
+        <h3>Beginnings</h3>
+        <p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing,
+        they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began
+        making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular
+        bands performing in the Des Moines area.</p>
+      </article><br>
+      <article>
+        <h3>Our Music</h3>
+        <p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
+        <ul>
+          <li>Country</li>
+          <li>Bluegrass</li>
+          <li>Folk</li>
+          <li>Blues</li>
+        </ul>
+        <p>Upon request, the band can play almost every style or genre of music you desire.</p>
+      </article><br>
+      <article>
+        <h3>Tour</h3>
+        <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations
+        including, but not limited to:</p>
+        <ul>
+          <li>Indianola</li>
+          <li>Red Oak</li>
+          <li>Pleasantville</li>
+        </ul>
+        <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
+      </article><br>
+      <article>
+        <h3>Website source</h3>
+        <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
+        website.</p><a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png"></a>
+      </article>
+    </div>
+  </div>
   <footer>
     &copy; 2017 by Boots 'N Beer
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
