Added jumbotron and 12 column layout to about page

--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -49,7 +49,7 @@
     </nav>
 
 <header class="below_menu_container">    
-<img src="img/bootsnbeer_logo2.png" alt="Band Logo" />
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 
 <h1> Information Page </h1>
