--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -49,7 +49,7 @@
     
 <header class="below_menu_container">
 
-<img src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
+<img src="img/bootsnbeer_logo.png" alt="Band Logo"/>
 <img src="img/guitar.png" alt="Guitar"/> 
 <img src="img/piano.jpg" alt="Piano"/> 
 </header>
