--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -49,7 +49,7 @@
     
 <header class="below_menu_container">
 
-<img src="img/bootsnbeer_logo2.png" alt="Band Logo" />
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 
 <h1>Schedule</h1>
