--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -47,7 +47,7 @@
     </nav>
 <header class="below_menu_container">
 
-<img src="img/bootsnbeer_logo2.png" alt="Band Logo" />
+<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 
 <h1>Items for sale</h1>
