Changed CSS file name, padded container under nav bar, added column layout to About page, bolded some headers, padded footer, and edited nav bar item order.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -3,12 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-   <title>Boots N' Beer Band: About Page</title>
+  <title>Boots N' Beer Band: About Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="bootstrap.css">
- 
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -16,15 +15,18 @@
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
         "false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span></button> <a class="navbar-brand" href=
-        "#">Bootstrap</a>
+        "#">Boots N' Beer Band</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="album_page.html">Albums</a>
-          </li>
           <li>
             <a href="index.html">Index</a>
+          </li>
+          <li>
+            <a href="about_page.html">About Us</a>
+          </li>
+          <li>
+            <a href="album_page.html">Albums</a>
           </li>
           <li>
             <a href="info_page.html">Members' Information</a>
@@ -45,49 +47,53 @@
       </div>
     </div>
   </nav>
-  
   <div class="container">
     <div class="below_menu_container">
-      <header>
-        <h1>The Boots N' Beer Band</h1>
-      </header>
       <article>
         <h2>About the Band</h2>
       </article><br>
-      <article>
-        <h3>Beginnings</h3>
-        <p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing,
-        they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began
-        making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular
-        bands performing in the Des Moines area.</p>
-      </article><br>
-      <article>
-        <h3>Our Music</h3>
-        <p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
-        <ul>
-          <li>Country</li>
-          <li>Bluegrass</li>
-          <li>Folk</li>
-          <li>Blues</li>
-        </ul>
-        <p>Upon request, the band can play almost every style or genre of music you desire.</p>
-      </article><br>
-      <article>
-        <h3>Tour</h3>
-        <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations
-        including, but not limited to:</p>
-        <ul>
-          <li>Indianola</li>
-          <li>Red Oak</li>
-          <li>Pleasantville</li>
-        </ul>
-        <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
-      </article><br>
-      <article>
-        <h3>Website source</h3>
-        <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
-        website.</p><a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png"></a>
-      </article>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Beginnings</h3>
+          <p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After
+          performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs,
+          they began making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for
+          more popular bands performing in the Des Moines area.</p>
+        </article>
+      </div><br>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Our Music</h3>
+          <p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
+          <ul>
+            <li>Country</li>
+            <li>Bluegrass</li>
+            <li>Folk</li>
+            <li>Blues</li>
+          </ul>
+          <p>Upon request, the band can play almost every style or genre of music you desire.</p>
+        </article>
+      </div><br>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Tour</h3>
+          <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations
+          including, but not limited to:</p>
+          <ul>
+            <li>Indianola</li>
+            <li>Red Oak</li>
+            <li>Pleasantville</li>
+          </ul>
+          <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
+        </article>
+      </div><br>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Website source</h3>
+          <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
+          website.</p><a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png"></a>
+        </article>
+      </div>
     </div>
   </div>
   <footer>
