--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -8,40 +8,53 @@
         font-weight: bold;
         }
   </style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots 'N Beer: Homepage</title>
 </head>
 <body>
-  <header>
-    <h1>The Boots N' Beer Band</h1>
-  </header>
-  <nav>
-    <ul>
-      <li>
-        <a href="about_page.html">About Us</a>
-      </li>
-      <li>
-        <a href="album_page.html">Albums</a>
-      </li>
-      <li>
-        <a href="info_page.html">Members' Information</a>
-      </li>
-      <li>
-        <a href="log-in_page.html">Log-in</a>
-      </li>
-      <li>
-        <a href="schedule_page.html">Schedule</a>
-      </li>
-      <li>
-        <a href="signup_page.html">Sign up</a>
-      </li>
-      <li>
-        <a href="store_page.html">Merchandise</a>
-      </li>
-    </ul>
-  </nav><br>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
+        "false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span></button> <a class="navbar-brand" href=
+        "#">Boots N' Beer Band</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+        <li>
+            <a href="index.html">Index</a>
+          </li>
+          <li>
+            <a href="about_page.html">About Us</a>
+          </li>
+          <li>
+            <a href="album_page.html">Albums</a>
+          </li>
+          <li>
+            <a href="info_page.html">Members' Information</a>
+          </li>
+          <li>
+            <a href="log-in_page.html">Log-in</a>
+          </li>
+          <li>
+            <a href="schedule_page.html">Schedule</a>
+          </li>
+          <li>
+            <a href="signup_page.html">Sign up</a>
+          </li>
+          <li>
+            <a href="store_page.html">Merchandise</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="below_menu_container">
   <article>
-    <h2 style="text-align:center;">The Boots N' Beer Band Homepage</h2>
+    <h2>The Boots N' Beer Band Homepage</h2>
     <p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite small-town band! See the different links on
     this page to get any cool novelty items, find out about important dates and events, or just to listen to what kind of music
     the band has been brewing up!</p>
