--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -3,38 +3,51 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots N' Beer: Tour Schedule</title>
 </head>
 <body>
-  <header>
-    <h1>The Boots N' Beer Band</h1>
-  </header>
-  <nav>
-    <ul>
-      <li>
-        <a href="about_page.html">About Us</a>
-      </li>
-      <li>
-        <a href="album_page.html">Albums</a>
-      </li>
-      <li>
-        <a href="index.html">Index</a>
-      </li>
-      <li>
-        <a href="info_page.html">Members' Information</a>
-      </li>
-      <li>
-        <a href="log-in_page.html">Log-in</a>
-      </li>
-      <li>
-        <a href="signup_page.html">Sign up</a>
-      </li>
-      <li>
-        <a href="store_page.html">Merchandise</a>
-      </li>
-    </ul>
-  </nav><br>
+ <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
+        "false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span></button> <a class="navbar-brand" href=
+        "#">Boots N' Beer Band</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+        <li>
+            <a href="index.html">Index</a>
+          </li>
+          <li>
+            <a href="about_page.html">About Us</a>
+          </li>
+          <li>
+            <a href="album_page.html">Albums</a>
+          </li>
+          <li>
+            <a href="info_page.html">Members' Information</a>
+          </li>
+          <li>
+            <a href="log-in_page.html">Log-in</a>
+          </li>
+          <li>
+            <a href="schedule_page.html">Schedule</a>
+          </li>
+          <li>
+            <a href="signup_page.html">Sign up</a>
+          </li>
+          <li>
+            <a href="store_page.html">Merchandise</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="below_menu_container">
   <article>
     <h2>Tour Schedule</h2>
     <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
