--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -3,39 +3,51 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots N' Beer: Merchandise</title>
 </head>
 <body>
-  <header>
-    <h1>The Boots N' Beer Band</h1>
-  </header>
-  <nav>
-    <ul>
-      <li>
-        <a href="about_page.html">About Us</a>
-      </li>
-      <li>
-        <a href="album_page.html">Album Information</a>
-      </li>
-      <li>
-        <a href="index.html">Index</a>
-      </li>
-      <li>
-        <a href="info_page.html">Members' Information</a>
-      </li>
-      <li>
-        <a href="log-in_page.html">Log-in</a>
-      </li>
-      <li>
-        <a href="schedule_page.html">Schedule</a>
-      </li>
-      <li>
-        <a href="signup_page.html">Sign up</a>
-      </li>
-    </ul>
-    <nav>
-      <br>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
+        "false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span></button> <a class="navbar-brand" href=
+        "#">Boots N' Beer Band</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+        <li>
+            <a href="index.html">Index</a>
+          </li>
+          <li>
+            <a href="about_page.html">About Us</a>
+          </li>
+          <li>
+            <a href="album_page.html">Albums</a>
+          </li>
+          <li>
+            <a href="info_page.html">Members' Information</a>
+          </li>
+          <li>
+            <a href="log-in_page.html">Log-in</a>
+          </li>
+          <li>
+            <a href="schedule_page.html">Schedule</a>
+          </li>
+          <li>
+            <a href="signup_page.html">Sign up</a>
+          </li>
+          <li>
+            <a href="store_page.html">Merchandise</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="below_menu_container">
       <article>
         <h2>Items for sale</h2>
       </article><br>
@@ -46,7 +58,7 @@
       <article>
         <h4>T-Shirt</h4><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
         <p>T-shirts with the logo on the front are available in the following sizes:</p>
-        <p id="sizes">S, M, L, XL, XXL, XXXL.</p>
+        <p style="font-weight: bold;">S, M, L, XL, XXL, XXXL.</p>
       </article><br>
       <article>
         <h4>Mouse Pad</h4><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
