Added table styling on album page, added buttons, and made sure all of the pages were validated

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -94,6 +94,8 @@
     </ul>
 
     <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
+    
+    <a role="button" href="schedule_page.html">To Schedule Page</a>
 
     <h3>Website source</h3>
     <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
