--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -37,7 +37,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Index</a></li>
             <li><a href="about_page.html">About the Band</a></li>
-            <li><a href="album_page.html">Album Information</a</li>
+            <li><a href="album_page.html">Album Information</a></li>
             <li><a href="info_page.html">Members' Information</a></li>
             <li><a href="schedule_page.html">Schedule</a></li>
             <li><a href="store_page.html">Merchandise</a></li>
@@ -58,7 +58,7 @@
 <p> Main page displays Boots N Beer's latest hit albums. </p>
 <p> Click on this page to see two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>Dirty</th>
