--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -36,7 +36,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Index</a></li>
             <li><a href="about_page.html">About the Band</a></li>
-            <li><a href="album_page.html">Album Information</a</li>
+            <li><a href="album_page.html">Album Information</a></li>
             <li><a href="info_page.html">Members' Information</a></li>
             <li><a href="schedule_page.html">Schedule</a></li>
             <li><a href="store_page.html">Merchandise</a></li>
@@ -59,7 +59,7 @@
 </div>
 <div style="width: 25%;" class="form-group">   
     <label for="password">Password</label>
-    <input type="text" class="form-control" id="password" placeholder="Password">
+    <input type="password" class="form-control" id="password" placeholder="Password">
 </div>
 <input type="checkbox">Remember Me
 <br>
