--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -70,7 +70,7 @@
 </div>
 <div style="width: 25%;" class="form-group">   
     <label for="password">Password</label>
-    <input type="text" class="form-control" id="password" placeholder="Password">
+    <input type="password" class="form-control" id="password" placeholder="Password">
 </div>
     
 <input type="checkbox">Receive News and Updates
