Added alert to index page

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -53,7 +53,12 @@
 <img src="img/guitar.png" alt="Guitar"/> 
 <img src="img/piano.jpg" alt="Piano"/> 
 </header>
-<h1> Index Page Title: Boots N Beer Band</h1>
+<h1>Boots N Beer Band</h1>
+
+<div class="alert alert-warning" role="alert">
+  <strong>WARNING!</strong> You are about to see offers that you cannot pass up.
+</div>
+
 <p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite small-town band! See the different links on this page to get any cool novelty items, find out about important dates and events, or just to listen to what kind of music the band has been brewing up!</p>
 
 <p>Need a band for your barn-yard wedding? Feel like listening to something that represents Iowa? Just wanna get out of the house and listen to a great small-town band? If so, then Boots 'N Beer Band is the band for you! They range from country to old rock to even old blues! There's nothing this band can't do!</p>
