Added column formatting to info page, and formatted table in album page. Also padded the table data.

--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -50,40 +50,46 @@
     <div class="below_menu_container">
   <article>
     <h2>Studio Albums</h2>
-    <p>Check out Boots N Beer's latest hit albums!</p>
+    <p>Check out Boots N' Beer's latest hit albums!</p>
     <p>These studio albums are two of Boots N' Beer's hottest albums, "Dirty" and "Muddy Spurs".</p>
-    <table>
+    <table class="table-bordered">
       <thead>
         <tr>
+          <th> #</th><br>
           <th>Dirty</th>
+          <th> # </th>
           <th>Muddy Spurs</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td class="tracks">Track List:</td>
-          <td class="tracks">Track List:</td>
-        </tr>
-      </tbody>
       <tfoot>
         <tr>
-          <td>"Dirt Roads and Tractor Tires"</td>
+        <th scope="row">1</th>
+          <td>"Dirt Roads &amp; Tractor Tires"</td>
+          <th scope="row">1</th>
           <td>"Cornbread (Iowa Carbs)"</td>
         </tr>
         <tr>
+        <th scope="row">2</th>
           <td>"I Got a Woman"</td>
+          <th scope="row">2</th>
           <td>"Everything's Better Wrapped in Bacon"</td>
         </tr>
         <tr>
+        <th scope="row">3</th>
           <td>"Rollin' Through the Fields"</td>
+          <th scope="row">3</th>
           <td>"Bumpy Towns, Flat Highways"</td>
         </tr>
         <tr>
+        <th scope="row">4</th>
           <td>"The Big One"</td>
+          <th scope="row">4</th>
           <td>"Iowa: America's Mini Canada"</td>
         </tr>
         <tr>
+        <th scope="row">5</th>
           <td>"You Only Need Some Grit"</td>
+          <th scope="row">5</th>
           <td>"Bootscooters"</td>
         </tr>
       </tfoot>
