--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -9,7 +9,7 @@
   <title>Boots N' Beer: Information Page</title>
 </head>
 <body>
- <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
@@ -18,7 +18,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-        <li>
+          <li>
             <a href="index.html">Index</a>
           </li>
           <li>
@@ -48,32 +48,44 @@
   </nav>
   <div class="container">
     <div class="below_menu_container">
+      <article>
+        <h2>Meet the Band</h2>
+      </article><br>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Joe Jacks</h3><img src="img/my_face.jpg" alt="Image of Joe Deere">
+          <p>Joe Jacks is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he
+          enjoys wearing a good pair of boots and blue jeans and watching football on Sundays.</p>
+        </article>
+      </div>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Randy Raccoon</h3><img src="img/ben_face.png" alt="Image of Randy Raccoon">
+          <p>Randy Raccoon is the lead guitarist and back-up vocals. He plays acoustic, electric, and steel guitar, and also
+          banjo, and fiddle! Randy's favorite country star is Charlie Daniel's and he loves watching the Grand Ole Opry.</p>
+        </article>
+      </div>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Denver Denim</h3><img src="img/chase_face.png" alt="Image of Denver Denim">
+          <p>Denver Denim is the lead bass and back-up vocals. He also plays harmonica! Denver's favorite movie is the Blue's
+          Brothers because it's hilarious and it has great music in it too!</p>
+        </article>
+      </div>
+      <div class="begginnings col-xs-6">
+        <article>
+          <h3>Jake Grit</h3><img src="img/duck_kid_page.png" alt="Image of Jake Grit">
+          <p>Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group, so he plays the drums, piano,
+          and even the bongos! Jake says that he has playing drums ever since he was a kid, whether it was when he bought his
+          first pair of drums or when he was beating on the trash can outside, he just felt this rhythm inside!</p>
+        </article>
+      </div>
+    </div>
+  </div>
   <article>
-    <h2>Meet the Band</h2>
-  </article><br>
-  <article>
-    <h3>Joe Jacks</h3><img src="img/my_face.jpg" alt="Image of Joe Deere">
-    <p>Joe Jacks is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he enjoys
-    wearing a good pair of boots and blue jeans and watching football on Sundays.</p>
-  </article><br>
-  <article>
-    <h3>Randy Raccoon</h3><img src="img/ben_face.png" alt="Image of Randy Raccoon">
-    <p>Randy Raccoon is the lead guitarist and back-up vocals. He plays acoustic, electric, and steel guitar, and also banjo,
-    and fiddle! Randy's favorite country star is Charlie Daniel's and he loves watching the Grand Ole Opry.</p>
-  </article><br>
-  <article>
-    <h3>Denver Denim</h3><img src="img/chase_face.png" alt="Image of Denver Denim">
-    <p>Denver Denim is the lead bass and back-up vocals. He also plays harmonica! Denver's favorite movie is the Blue's
-    Brothers because it's hilarious and it has great music in it too!</p>
-  </article><br>
-  <article>
-    <h3>Jake Grit</h3><img src="img/duck_kid_page.png" alt="Image of Jake Grit">
-    <p>Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group, so he plays the drums, piano, and
-    even the bongos! Jake says that he has playing drums ever since he was a kid, whether it was when he bought his first pair
-    of drums or when he was beating on the trash can outside, he just felt this rhythm inside!</p>
-  </article><br>
-  <footer>
-    &copy; 2017 by Boots 'N Beer
-  </footer>
+    <footer>
+      &copy; 2017 by Boots 'N Beer
+    </footer>
+  </article>
 </body>
 </html>
