Added an alert on albums page, jumbotron items on the store page, and a button linked to the Simpson homepage.

--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -48,6 +48,9 @@
   </nav>
   <div class="container">
     <div class="below_menu_container">
+    <div class="alert alert-info">
+  <strong>Reminder!</strong> Boots N' Beer's lastest album "Picket Fences &amp; Pontoons" drops Oct. 15th
+</div>
   <article>
     <h2>Studio Albums</h2>
     <p>Check out Boots N' Beer's latest hit albums!</p>
