--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -50,20 +50,30 @@
     <div class="below_menu_container">
       <article>
         <h2>Items for sale</h2>
-      </article><br>
+      </article>
+      </div>
+      <div class="container">
+    <div class="jumbotron">
       <article>
-        <h4>Coffee Mug</h4><img src="img/bootsnbeer_mug.png" alt="Photo of Mug">
+        <h3>Coffee Mug</h3><img src="img/bootsnbeer_mug.png" alt="Photo of Mug">
         <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
-      </article><br>
+      </article>
+      </div>
+      <div class="container">
+    <div class="jumbotron">
       <article>
-        <h4>T-Shirt</h4><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
+        <h3>T-Shirt</h3><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
         <p>T-shirts with the logo on the front are available in the following sizes:</p>
         <p style="font-weight: bold;">S, M, L, XL, XXL, XXXL.</p>
-      </article><br>
+      </article>
+      </div>
+      <div class="container">
+    <div class="jumbotron">
       <article>
-        <h4>Mouse Pad</h4><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
+        <h3>Mouse Pad</h3><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
         <p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.</p>
-      </article><br>
+      </article>
+      </div>
       <article>
         <h3>More items coming soon!</h3>
       </article><br>
