--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -18,7 +18,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-        <li>
+          <li>
             <a href="index.html">Index</a>
           </li>
           <li>
@@ -49,38 +49,33 @@
   <div class="container">
     <div class="below_menu_container">
       <article>
-        <h2>Items for sale</h2>
+        <h2>Items for Sale</h2>
       </article>
-      </div>
-      <div class="container">
-    <div class="jumbotron">
       <article>
         <h3>Coffee Mug</h3><img src="img/bootsnbeer_mug.png" alt="Photo of Mug">
         <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
       </article>
-      </div>
-      <div class="container">
-    <div class="jumbotron">
       <article>
         <h3>T-Shirt</h3><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
         <p>T-shirts with the logo on the front are available in the following sizes:</p>
         <p style="font-weight: bold;">S, M, L, XL, XXL, XXXL.</p>
       </article>
-      </div>
-      <div class="container">
-    <div class="jumbotron">
       <article>
         <h3>Mouse Pad</h3><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
         <p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.</p>
       </article>
+      <div class="container">
+        <div class="jumbotron">
+          <article>
+            <h2>More items coming soon!</h2>
+            <h3>Order today!</h3>
+          </article>
+        </div>
       </div>
-      <article>
-        <h3>More items coming soon!</h3>
-      </article><br>
-      <footer>
-        &copy; 2017 by Boots 'N Beer
-      </footer>
-    </nav>
-  </nav>
+    </div>
+  </div>
+  <footer>
+    &copy; 2017 by Boots 'N Beer
+  </footer>
 </body>
 </html>
