--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -91,8 +91,7 @@
         <article>
           <h3>Website source</h3>
           <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
-          website.</p>
-          <a href="http://simpson.edu" class="btn btn-info" role="button">Simpson College Homepage</a>
+          website.</p><a href="http://simpson.edu" class="btn btn-info" role="button">Simpson College Homepage</a>
         </article>
       </div>
     </div>
