--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -9,7 +9,7 @@
   <title>Boots N' Beer Band Album Page</title>
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
@@ -18,7 +18,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-        <li>
+          <li>
             <a href="index.html">Index</a>
           </li>
           <li>
@@ -48,61 +48,63 @@
   </nav>
   <div class="container">
     <div class="below_menu_container">
-    <div class="alert alert-info">
-  <strong>Reminder!</strong> Boots N' Beer's lastest album "Picket Fences &amp; Pontoons" drops Oct. 15th
-</div>
-  <article>
-    <h2>Studio Albums</h2>
-    <p>Check out Boots N' Beer's latest hit albums!</p>
-    <p>These studio albums are two of Boots N' Beer's hottest albums, "Dirty" and "Muddy Spurs".</p>
-    <table class="table-bordered">
-      <thead>
-        <tr>
-          <th> #</th><br>
-          <th>Dirty</th>
-          <th> # </th>
-          <th>Muddy Spurs</th>
-        </tr>
-      </thead>
-      <tfoot>
-        <tr>
-        <th scope="row">1</th>
-          <td>"Dirt Roads &amp; Tractor Tires"</td>
-          <th scope="row">1</th>
-          <td>"Cornbread (Iowa Carbs)"</td>
-        </tr>
-        <tr>
-        <th scope="row">2</th>
-          <td>"I Got a Woman"</td>
-          <th scope="row">2</th>
-          <td>"Everything's Better Wrapped in Bacon"</td>
-        </tr>
-        <tr>
-        <th scope="row">3</th>
-          <td>"Rollin' Through the Fields"</td>
-          <th scope="row">3</th>
-          <td>"Bumpy Towns, Flat Highways"</td>
-        </tr>
-        <tr>
-        <th scope="row">4</th>
-          <td>"The Big One"</td>
-          <th scope="row">4</th>
-          <td>"Iowa: America's Mini Canada"</td>
-        </tr>
-        <tr>
-        <th scope="row">5</th>
-          <td>"You Only Need Some Grit"</td>
-          <th scope="row">5</th>
-          <td>"Bootscooters"</td>
-        </tr>
-      </tfoot>
-    </table><b>Albums were recorded at Golden Fiddle Records.</b>
-    <address>
-      Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA.
-    </address>
-  </article><br>
-  <footer>
-    &copy; 2017 by Boots 'N Beer
-  </footer>
+      <div class="alert alert-info">
+        <strong>Reminder!</strong> Boots N' Beer's lastest album "Picket Fences &amp; Pontoons" drops Oct. 15th
+      </div>
+      <article>
+        <h2>Studio Albums</h2>
+        <p>Check out Boots N' Beer's latest hit albums!</p>
+        <p>These studio albums are two of Boots N' Beer's hottest albums, "Dirty" and "Muddy Spurs".</p><br>
+        <table class="table-bordered">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Dirty</th>
+              <th>#</th>
+              <th>Muddy Spurs</th>
+            </tr>
+          </thead>
+          <tfoot>
+            <tr>
+              <th scope="row">1</th>
+              <td>"Dirt Roads &amp; Tractor Tires"</td>
+              <th scope="row">1</th>
+              <td>"Cornbread (Iowa Carbs)"</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>"I Got a Woman"</td>
+              <th scope="row">2</th>
+              <td>"Everything's Better Wrapped in Bacon"</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>"Rollin' Through the Fields"</td>
+              <th scope="row">3</th>
+              <td>"Bumpy Towns, Flat Highways"</td>
+            </tr>
+            <tr>
+              <th scope="row">4</th>
+              <td>"The Big One"</td>
+              <th scope="row">4</th>
+              <td>"Iowa: America's Mini Canada"</td>
+            </tr>
+            <tr>
+              <th scope="row">5</th>
+              <td>"You Only Need Some Grit"</td>
+              <th scope="row">5</th>
+              <td>"Bootscooters"</td>
+            </tr>
+          </tfoot>
+        </table><b>Albums were recorded at Golden Fiddle Records.</b>
+        <address>
+          Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA.
+        </address>
+      </article><br>
+      <footer>
+        &copy; 2017 by Boots 'N Beer
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
