--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -9,7 +9,7 @@
   <title>Boots N' Beer: Tour Schedule</title>
 </head>
 <body>
- <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded=
@@ -18,7 +18,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-        <li>
+          <li>
             <a href="index.html">Index</a>
           </li>
           <li>
@@ -48,27 +48,29 @@
   </nav>
   <div class="container">
     <div class="below_menu_container">
-  <article>
-    <h2>Tour Schedule</h2>
-    <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
-    <ol>
-      <li>September 15th - Indianola, Iowa</li>
-      <li>September 18th - Pleasantville, Iowa</li>
-      <li>September 20th - Red Oak, Iowa</li>
-      <li>September 22nd - Storm Lake, Iowa</li>
-      <li>September 25th - Waterloo, Iowa</li>
-      <li>September 27th - Davenport, Iowa</li>
-      <li>September 29th - Marshalltown, Iowa</li>
-      <li>October 2nd - Aurelia, Iowa</li>
-      <li>October 4th - Ottumwa, Iowa</li>
-      <li>October 6th - Columbus, Iowa</li>
-      <li>October 10 - Mount Vernon, Iowa</li>
-      <li>October 15th - Carroll, Iowa</li>
-      <li>October 31st - Ames, Iowa</li>
-      <li>November 4th - Templeton, Iowa</li>
-    </ol>
-    <h3>More Dates To Be Announced...</h3>
-  </article><br>
+      <article>
+        <h2>Tour Schedule</h2>
+        <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
+        <ol>
+          <li>September 15th - Indianola, Iowa</li>
+          <li>September 18th - Pleasantville, Iowa</li>
+          <li>September 20th - Red Oak, Iowa</li>
+          <li>September 22nd - Storm Lake, Iowa</li>
+          <li>September 25th - Waterloo, Iowa</li>
+          <li>September 27th - Davenport, Iowa</li>
+          <li>September 29th - Marshalltown, Iowa</li>
+          <li>October 2nd - Aurelia, Iowa</li>
+          <li>October 4th - Ottumwa, Iowa</li>
+          <li>October 6th - Columbus, Iowa</li>
+          <li>October 10 - Mount Vernon, Iowa</li>
+          <li>October 15th - Carroll, Iowa</li>
+          <li>October 31st - Ames, Iowa</li>
+          <li>November 4th - Templeton, Iowa</li>
+        </ol>
+        <h3>More Dates To Be Announced...</h3>
+      </article>
+    </div>
+  </div><br>
   <footer>
     &copy; 2017 by Boots 'N Beer
   </footer>
