--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -18,7 +18,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-        <li>
+          <li>
             <a href="index.html">Index</a>
           </li>
           <li>
@@ -48,20 +48,28 @@
   </nav>
   <div class="container">
     <div class="below_menu_container">
-  <article>
-    <h2>Sign Up Page</h2>
-    <p>By creating an account, you will be able to keep a shopping cart of merchandise you intend on purchasing if you leave
-    the webiste. You will also be notified whenever information on any of the pages have been updated.</p>
-    <form>
-      <pre>
-First Name: <input type="text" name="firstname">
-Last Name:  <input type="text" name="lastname">
-Username:   <input type="text" name="username">
-Password:   <input type="text" name="password">
-<input type="submit" value="Submit">
-</pre>
-    </form>
-  </article><br>
+      <article>
+        <h2>Sign Up Page</h2>
+        <p>By creating an account, you will be able to keep a shopping cart of merchandise you intend on purchasing if you
+        leave the webiste. You will also be notified whenever information on any of the pages have been updated.</p>
+        <div class="form-group">
+          <label for="first_name">First Name:</label> <input type="text" class="form-control" id="first_name">
+        </div>
+        <div class="form-group">
+          <label for="last_name">Last Name:</label> <input type="text" class="form-control" id="last_name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email Address:</label> <input type="email" class="form-control" id="email">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label> <input type="password" class="form-control" id="pwd">
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox">Sign up for our weekly newsletter?</label>
+        </div><button type="button" class="btn btn-info">Submit</button>
+      </article><br>
+    </div>
+  </div>
   <footer>
     &copy; 2017 by Boots 'N Beer
   </footer>
