Added CSS folder and changed link in all pages

--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Boots 'N Beer: Merchandise</title>
   
-  <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
+  <link rel="stylesheet" type="text/css" href="css/css_karson_richardson.css">
   
 </head>
 <body>
