--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <title>Boots N Beer Band Album Page </title> 
   
-  <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
+  <link rel="stylesheet" type="text/css" href="css/css_karson_richardson.css">
   
   <style>
   table {
