Added Twitter link

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -82,6 +82,11 @@ often to make sure you never miss out on the deal of a lifetime!</p>
 <p id="schedulerefer">For a more complete list of performances, please refer to the "Schedule" page...</p>
 
 
+<h3>Social Media</h3>
+
+<p>Be sure to follow us on Twitter! We post updates about Boots N Beer and its events daily!</p>
+<p>Follow us at <a href="https://twitter.com/BootsNBeerBand">@BootsNBeerBand</a></p>
+
 
 <h3 class="website_source">Website source</h3>
 
