--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -13,17 +13,36 @@
 <body>
 <header>
 
-<nav>
-    <ul>
-	    <li><a href="about_page.html">About the Band</a></li>
-	    <li><a href="album_page.html">Album Information</a></li>
-	    <li><a href="index.html">Index</a></li>
-	    <li><a href="info_page.html">Members' Information</a></li>
-	    <li><a href="log-in_page.html">Log-in</a></li>
-	    <li><a href="schedule_page.html">Schedule</a></li>
-	    <li><a href="store_page.html">Merchandise</a></li>
-	</ul>
-</nav>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+
+            <!-- Three line "hamburger" icon for the collapsed navigation -->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <!-- Title on nav bar -->
+          <a class="navbar-brand" href="#">Boots 'N Beer</a>
+        </div>
+
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Index</a></li>
+            <li><a href="about_page.html">About the Band</a></li>
+            <li><a href="album_page.html">Album Information</a></li>
+            <li><a href="info_page.html">Members' Information</a></li>
+            <li><a href="schedule_page.html">Schedule</a></li>
+            <li><a href="store_page.html">Merchandise</a></li>
+            <li><a href="signup_page.html">Sign up</a></li>
+            <li><a href="log-in_page.html">Log-in</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 
