Added the below menu container

--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -60,6 +60,7 @@
       </div>
     </nav>
 
+<div class = "below_menu_container">
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
 
 <img src="img/guitar.png" alt="Guitar"/> 
@@ -94,6 +95,8 @@ please contact Matt Rockhold, the band's manager.</p>
 <footer> 
 &copy; 2017 by Boots 'N Beer 
 </footer>
+
+</div>
 
 </body>
 </html>
