--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </nav>
-
+<div class = "below_menu_container">
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 </header>
 
@@ -77,5 +77,8 @@ be sure to buy your tickets today!</p>
 <footer>
 	&copy; 2017 by Boots 'N Beer
 </footer>
+
+</div>
+
 </body>
 </html>
