--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -43,6 +43,7 @@
         </div>
       </div>
     </nav>
+<div class = "below_menu_container">
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 
@@ -65,5 +66,8 @@ Password:   <input type="text" name="password">
 <footer>
 	&copy; 2017 by Boots 'N Beer
 </footer>
+
+</div>
+
 </body>
 </html>
