--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -44,7 +44,7 @@
         </div>
       </div>
     </nav>
-
+<div class = "below_menu_container">
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 
 </header>
@@ -120,6 +120,8 @@ often to make sure you never miss out on the deal of a lifetime!</p>
 <footer>
 	&copy; 2017 by Boots 'N Beer
 </footer>
+
+</div>
 
 </body>
 </html>
