--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -62,7 +62,7 @@
         </div>
       </div>
     </nav>
-
+<div class = "below_menu_container">
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/> 
 </header> 
 
@@ -123,5 +123,8 @@ Make sure you stay tuned to find out when it is official!</p>
 <footer> 
 &copy; by Boots 'N Beer 
 </footer>
+
+</div>
+
 </body> 
 </html>
