--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </nav>
-
+<div class = "below_menu_container">
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 
 <h1> Information Page </h1>
@@ -85,6 +85,8 @@ was beating on the trash can outside, he just felt this rhythm inside! </p>
 <footer> 
 &copy; by Boots 'N Beer 
 </footer>
+
+</div>
 
 </body>
   </html>
