--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </nav>
-
+<div class = "below_menu_container">
 <img src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 <h1>Log-in Page</h1>
@@ -67,6 +67,8 @@ and contact information.</p>
 <footer> 
 &copy; 2017 Boots 'N Beer Band 
 </footer>
+
+</div>
 
 </body>
 </html>
