--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -44,7 +44,7 @@
         </div>
       </div>
     </nav>
-
+<div class = "below_menu_container">
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 
 </header>
@@ -83,5 +83,8 @@ some of the root'nest toot'nest Tees around town.</p>
 <footer>
 	&copy; 2017 by Boots 'N Beer
 </footer>
+
+</div>
+
 </body>
 </html>
