Added headings to member pictures and borders around the images on the info page.

--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -53,19 +53,25 @@
 
 <h2 class="biography"> Biography </h2>
 
-<img src="img/my_face.jpg" alt="Image of Joe Deere"/>
+<h3>Joe Jacks</h3>
+
+<img class="member" src="img/my_face.jpg" alt="Image of Joe Jacks"/>
 
 <p> Joe Jacks is the lead singer of the band. Upon that, he also plays the mandolin. 
 Joe is from Murray, IA and he enjoys wearing a good pair of boots and blue jeans and 
 watching football on Sundays. </p> 
 
-<img src="img/ben_face.png" alt="Image of Randy Raccoon"/>
+<h3>Randy Raccoon</h3>
+
+<img class="member" src="img/ben_face.png" alt="Image of Randy Raccoon"/>
 
 <p> Randy Raccoon is the lead guitarist and back-up vocals. He plays acoustic, electric, 
 and steel guitar, and also banjo, and fiddle! Randy's favorite country star is Charlie 
 Daniel's and he loves watching the Grand Ole Opry.</p> 
 
-<img src="img/chase_face.png" alt="Image of Denver Denim"/> 
+<h3>Denver Denim</h3>
+
+<img class="member" src="img/chase_face.png" alt="Image of Denver Denim"/> 
 
 <p> Denver Denim is the lead bass and back-up vocals. He also plays harmonica! Denver's 
 favorite movie is the Blue's Brothers because it's hilarious and it has great music in it too!</p>
@@ -75,7 +81,9 @@ His name is DJ Denim and he specializes in disco music and all of your favorite
 pop and funk. Be sure to check DJ Denim out by either attending one of the local 
 shows or contacting Denver Denim himself!</p>
 
-<img src="img/duck_kid_page.png" alt="Image of Jake Grit"/> 
+<h3>Jake Grit</h3>
+
+<img class="member" src="img/duck_kid_page.png" alt="Image of Jake Grit"/> 
 
 <p> Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group 
 so he plays the drums, piano, and even the bongos!Jake says that he has playing drums ever 
