Fixed Heading borders and added borders around the images on the index page. Also updated logo on login and signup page

--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
 <div class = "below_menu_container">
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+<img src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 
 <h1>Log-in Page</h1>
 
