--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -63,9 +63,9 @@
 <div class = "below_menu_container">
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
 
-<img src="img/guitar.png" alt="Guitar"/> 
+<img class="piano" src="img/guitar.png" alt="Guitar"/> 
 
-<img src="img/piano.jpg" alt="Piano"/> 
+<img class="guitar" src="img/piano.jpg" alt="Piano"/> 
 
 
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
