added album pic, and stub hub link for ticket

--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -73,6 +73,9 @@
 <p> Both "Dirty" and "Muddy Spurs" were recorded in Des Moines, Iowa, which is close to where
 Boots N Beer will have the first few concerts of their upcoming tour! </p>
 
+<img class="album" src="img/album_cover.png" alt="Album Cover"/> 
+<br>
+
 <table>
   <thead>
     <tr>
