--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -52,17 +52,18 @@
 
 <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
 
+
 <ol>
-	<li>September 15th - Indianola, Iowa</li>
-	<li>September 18th - Pleasantville, Iowa</li>
-	<li>September 20th - Red Oak, Iowa</li>
-	<li>September 22nd - Storm Lake, Iowa</li>
-	<li>September 25th - Waterloo, Iowa</li>
-	<li>September 27th - Davenport, Iowa</li>
-	<li>September 29th - Marshalltown, Iowa</li>
-	<li>October 2nd	- Aurelia, Iowa</li>
-	<li>October 4th	- Ottumwa, Iowa</li>
-	<li>October 6th	- Columbus, Iowa</li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">September 15th - Indianola, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">September 18th - Pleasantville, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">September 20th - Red Oak, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">September 22nd - Storm Lake, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">September 25th - Waterloo, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">September 27th - Davenport, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">September 29th - Marshalltown, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">October 2nd	- Aurelia, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">October 4th	- Ottumwa, Iowa</a></li>
+	<li><a href="http://stubhub.com" title="Indianola." style="color:#000000;text-decoration:none">October 6th	- Columbus, Iowa</a></li>
 </ol>
 
 <p>Miss one of the events? Boots N Beer offers video replays of the 
