--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -76,13 +76,13 @@ Boots N Beer will have the first few concerts of their upcoming tour! </p>
 <img class="album" src="img/album_cover.png" alt="Album Cover"/> 
 <br>
 
-<table>
-  <thead>
+<table class="table table-striped" style= "width: 40%;">
+  <tbody>
     <tr>
       <th>Dirty</th>
       <th>Muddy Spurs</th>
     </tr>
-  </thead>
+  </tbody>
   <tbody>
     <tr>
       <td>List of songs on album:</td>
